# ha-broker-dashboard

./: .env.example  Dockerfile  activemq-compose.yml  assembly.yaml  config.yaml  deploy.sh  deploy_remote.py  idea.md  pyproject.toml
embedded/: README.md  platformio.ini
embedded/include/: secrets.h.example
embedded/src/: main.cpp
ha_broker_dashboard/: config.py  conversions.py  data_store.py  main.py  mqtt_client.py  web_server.py  websocket_manager.py
ha_broker_dashboard/static/: index.html
test/: __init__.py
test/remote/: test_boolean.py  test_gauge.py  test_graph.py  test_runner.py  test_text.py
test/unit/: test_conversions.py
testing_clients/: __init__.py  test_boolean.py  test_gauge.py  test_graph.py  test_text.py
